@@ -15,12 +15,14 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Modernized Collections usage
  */
 package org.sitenetsoft.olinguito.server.core.responses;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.util.Collections;
+import java.util.Map;
 
 import org.sitenetsoft.olinguito.commons.api.format.ContentType;
 import org.sitenetsoft.olinguito.server.api.ODataApplicationException;
@@ -31,7 +33,7 @@ import org.sitenetsoft.olinguito.server.api.ServiceMetadata;
 public class StreamResponse extends ServiceResponse {
 
   public StreamResponse(ServiceMetadata metadata, ODataResponse response) {
-    super(metadata, response, Collections.emptyMap());
+    super(metadata, response, Map.of());
   }
 
   public void writeStreamResponse(InputStream streamContent, ContentType contentType) {
