@@ -15,12 +15,13 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Modernized Collections usage
  */
 package org.sitenetsoft.olinguito.server.core.debug;
 
 import java.io.IOException;
 import java.io.Writer;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -49,7 +50,7 @@ public class DebugTabRequest implements DebugTab {
       method = UNKOWN_MSG;
       uri = UNKOWN_MSG;
       protocol = UNKOWN_MSG;
-      headers = Collections.emptyMap();
+      headers = Map.of();
     }
   }
 
