@@ -15,6 +15,8 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Modernized Collections usage
  */
 package org.sitenetsoft.olinguito.server.core.uri.queryoption.apply;
 
@@ -51,7 +53,7 @@ public class CustomFunctionImpl implements CustomFunction {
   @Override
   public List<UriParameter> getParameters() {
     return parameters == null ?
-        Collections.emptyList() :
+        List.of() :
         Collections.unmodifiableList(parameters);
   }
 
